# rustls-aegis

./: Cargo.toml  LICENSE  README.md
benches/: ciphers.rs
src/: aead.rs  client.rs  hash.rs  hmac.rs  lib.rs
